feat: add summon API (#2)
